# spatial-italy

./: .coveragerc  .env.template  .gitignore  Home.py  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: fixtures_creation.ipynb
spatial_italy/: commons.py  data.py  map.py
tests/: test_data.py  test_map.py
tests/fixtures/: confini.py  demografia.py  geografia.py  upload_table_sample.csv  upload_table_sample.xlsx
