[tool.poetry]
name = "spatial-italy"
version = "0.1.0"
description = "A viewer for Italy geospatial data."
authors = ["lum4chi <francesco.lumachi@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "spatial_italy"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
plotly = "^5.15.0"
geopandas = "^0.13.2"
streamlit = "^1.25.0"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
nbformat = "^4.2.0"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
